--- a/res/values/id.xml
+++ b/res/values/id.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="twitter_oauth_button" type="id"/>
+    <item type="id" name="twitter_tweet"/>
     
 </resources>
