--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -14,4 +14,12 @@
         android:text="@string/hello_world"
         android:id="@id/twitter_tweet" />
 
+    <Button
+        android:id="@id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Button" />
+
 </RelativeLayout>
