--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jp.gecko655.earthquake.MainActivity$PlaceholderFragment" >
 
-    <TextView
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world"
