--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,9 +3,9 @@
     tools:context="jp.gecko655.earthquake.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@id/action_auth"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_auth"/>
 
 </menu>
