--- a/res/values/id.xml
+++ b/res/values/id.xml
@@ -3,5 +3,6 @@
     <item name="twitter_oauth_button" type="id"/>
     <item type="id" name="twitter_tweet"/>
     <item type="id" name="button1"/>
+    <item type="id" name="action_auth"/>
     
 </resources>
