Created layout of main fragment. Implemented some debug codes.

--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -8,18 +8,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="jp.gecko655.earthquake.MainActivity$PlaceholderFragment" >
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:id="@id/twitter_tweet" />
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
 
-    <Button
-        android:id="@id/button1"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@id/newTweetButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            style = "?android:attr/buttonBarButtonStyle"
+            android:text="@string/newTweetButton" />
+
+        <Button
+            android:id="@id/newRetweetButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            style = "?android:attr/buttonBarButtonStyle"
+            android:text="@string/newRetweetButton" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@id/listView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Button" />
+        android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_below="@+id/linearLayout1" >
+    </ListView>
 
 </RelativeLayout>
