Created fragment of new tweet and its function (open and close)

--- a/res/values/id.xml
+++ b/res/values/id.xml
@@ -8,4 +8,9 @@
     <item type="id" name="ScreenName"/>
     <item type="id" name="TweetContent"/>
     
+    <!-- fragment_new_tweet -->
+    <item type="id" name="newTweet"/>
+    <item type="id" name="newTweetLength"/>
+    <item type="id" name="submitNewTweet"/>
+    
 </resources>
