Added the function of showing the rest of letters able to tweet.

--- a/res/layout/fragment_new_tweet.xml
+++ b/res/layout/fragment_new_tweet.xml
@@ -36,6 +36,7 @@
             android:layout_height="match_parent"
             android:text="140"
             android:textSize="30sp"
+            android:minWidth="90sp"
             />
         <Button
             android:id="@id/submitNewTweet"
