--- a/res/layout/fragment_new_tweet.xml
+++ b/res/layout/fragment_new_tweet.xml
@@ -12,23 +12,9 @@
       android:layout_marginBottom="2dp"
       >
     </View>
-
-    <EditText
-        android:id="@id/newTweet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:ems="10"
-        android:inputType="textMultiLine"
-         >
-
-        <requestFocus />
-    </EditText>
-
     <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="9"
+        android:layout_height="wrap_content"
         android:orientation="horizontal" >
         <TextView 
             android:id="@id/newTweetLength"
@@ -42,7 +28,22 @@
             android:id="@id/submitNewTweet"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Register" />
+            android:text="@string/register" />
 
     </LinearLayout>
+
+    <EditText
+        android:id="@id/newTweet"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="top"
+        android:ems="10"
+        android:hint="@string/newTweetHint"
+        android:inputType="textMultiLine"
+         >
+
+        <requestFocus />
+    </EditText>
+
 </LinearLayout>
