--- a/res/layout/fragment_new_retweet.xml
+++ b/res/layout/fragment_new_retweet.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
         <TextView 
-            android:id="@id/newTweetLength"
+            android:id="@+id/newRetweetLength"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="140"
@@ -25,7 +25,7 @@
             android:minWidth="90sp"
             />
         <Button
-            android:id="@id/submitNewTweet"
+            android:id="@id/submitNewRetweet"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/register" />
@@ -33,14 +33,13 @@
     </LinearLayout>
 
     <EditText
-        android:id="@id/newTweet"
+        android:id="@id/newRetweet"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="0dip"
         android:layout_weight="1"
         android:gravity="top"
         android:ems="10"
-        android:hint="@string/newTweetHint"
-        android:inputType="textMultiLine"
+        android:hint="@string/newRetweetHint"
          >
 
         <requestFocus />
