--- a/res/layout/status_item.xml
+++ b/res/layout/status_item.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 <LinearLayout 
-    android:layout_width="match_parent"
+    android:layout_width="0dip"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:orientation="vertical" >
 
     <TextView
@@ -21,6 +22,11 @@
         />
 
 </LinearLayout>
-    
-
+<TextView
+    android:id="@id/deleteButton"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    android:text="Delete" />
 </LinearLayout>
