--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -30,6 +30,13 @@
             android:layout_weight="1"
             style = "?android:attr/buttonBarButtonStyle"
             android:text="@string/newRetweetButton" />
+        <Button
+            android:id="@id/action_reload"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            style = "?android:attr/buttonBarButtonStyle"
+            android:text="@string/action_reload" />
     </LinearLayout>
 
     <ListView
