--- a/res/values/id.xml
+++ b/res/values/id.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="twitter_oauth_button" type="id"/>
+    <!-- menus -->
     <item type="id" name="action_auth"/>
+    <item type="id" name="action_reload"/>
+
+    <!-- fragment main -->
     <item type="id" name="newTweetButton"/>
     <item type="id" name="newRetweetButton"/>
     <item type="id" name="listView"/>
