--- a/res/layout/fragment_new_retweet.xml
+++ b/res/layout/fragment_new_retweet.xml
@@ -12,37 +12,30 @@
       android:layout_marginBottom="2dp"
       >
     </View>
-    <LinearLayout 
+    <Button
+        android:id="@id/submitNewRetweet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-        <TextView 
-            android:id="@+id/newRetweetLength"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="140"
-            android:textSize="30sp"
-            android:minWidth="90sp"
-            />
-        <Button
-            android:id="@id/submitNewRetweet"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/register" />
+        android:text="@string/register" />
 
-    </LinearLayout>
 
     <EditText
         android:id="@id/newRetweet"
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="top"
+        android:inputType="number"
         android:ems="10"
-        android:hint="@string/newRetweetHint"
          >
 
         <requestFocus />
     </EditText>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/newRetweetHint"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
