--- a/res/layout/fragment_new_retweet.xml
+++ b/res/layout/fragment_new_retweet.xml
@@ -24,9 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
-        android:inputType="number"
         android:ems="10"
          >
+        <!--  android:inputType="number"-->
 
         <requestFocus />
     </EditText>
