New RT fragment will accept even schema (https://) is not specified.

--- a/res/layout/fragment_new_retweet.xml
+++ b/res/layout/fragment_new_retweet.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:gravity="top"
         android:ems="10"
+        android:inputType="textUri"
          >
         <!--  android:inputType="number"-->
 
