--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,5 +7,7 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_auth"/>
+    <item android:id="@id/toggle_yurekuru" 
+        android:title="@string/yurekuru_off"/>
 
 </menu>
